# hexclaw-desktop

./: .env  .env.example  .gitignore  CHANGELOG.md  LICENSE  Makefile  README.en.md  README.md  THIRD_PARTY.md  env.d.ts  eslint.config.ts  index.html  install.sh  package.json  playwright.browser.config.ts  playwright.browser.live.config.ts  playwright.config.ts  pnpm-lock.yaml  vite.config.ts  vitest.config.ts
.github/workflows/: ci.yml  package.yml  release.yml
docs/: feishu-architecture-plan.md  guide.en.md  guide.md  overview.en.md  overview.md  related-work.md  updates.en.md  updates.md
docs/claude-code-practices/: README.md
homebrew/: hexclaw.rb  update-cask.sh
scripts/: capture-wechat-assets.mjs
scripts/ci/: bootstrap-macos-release.sh  set-github-macos-secrets.sh  verify-macos-bundle.sh  verify-macos-signing-secrets.sh  verify-release.mjs
src/: App.vue  constants.ts  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  lib.rs  main.rs  menu.rs  ollama.rs  sidecar.rs  tray.rs  window.rs
src/__tests__/: api-alignment.test.ts  audit-alignment.test.ts  audit-deep.test.ts  audit-final.test.ts  audit-perf-security-dead-code.test.ts  audit-post-migration.test.ts  audit-ui.test.ts  bug-20260501-rtl-bidi-global.test.ts  bugfix-regression.test.ts  buglist-v4-verify.test.ts  business-user-journeys.test.ts  chain-chat.test.ts  chain-im.test.ts  chain-knowledge.test.ts  chain-mcp.test.ts  chain-memory.test.ts  chain-settings.test.ts  chain-skills.test.ts  chain-tasks.test.ts  chat-components-i18n.test.ts  code-review-v10-deep.test.ts  code-review-v11-runtime-bugs.test.ts  code-review-v12-view-layer.test.ts  code-review-v13-i18n-crosscut.test.ts  code-review-v14-security-final.test.ts  code-review-v2.test.ts  code-review-v3.test.ts  code-review-v5.test.ts  code-review-v7.test.ts  code-review-v8-full-chain.test.ts  code-review-v9-comprehensive.test.ts  code-review.test.ts  common-i18n.test.ts  comprehensive-api-layer.test.ts  comprehensive-integration.test.ts  comprehensive-stores-services.test.ts  comprehensive-utils-composables.test.ts  dead-code.test.ts  design-audit.test.ts  ecosystem-cross-review.test.ts  (+21 more)
src/api/: agents.ts  canvas.ts  capabilities.ts  chat.ts  client.ts  (+23 more)
(+366 files in other folders)
